1.0 "Asieoniezi"

0.131 "FIXME"
 440853 fix 0.130 crash while fetching some headers (Sci Fi)
 440470 fix 0.130 bug that made deleting articles very slow (Walt)
 440194 fix 0.127 memory leak (Valgrind)
 426377 workaround for GMime bug that won't show multipart images (Mike)
 440545 saving a group's headers could be faster (Charles / sysprof)
 441034 StringView::ltrim() speedups (Charles / sysprof)

0.130 "Hyperbolicsyllabicsesquedalymistic"
 417627 crash after throwing an instance of 'std::length_error' (Serge)
 438604 froze replying to posts with just "Re: " in the subject (Artur Jachacy)
 437686 0.129 didn't build on irix with MIPSpro C++ compiler. (Avi Bercovich)
 419199 fix 0.128 regression. (Frank Tabor)
 433316 task window coordinates set to -32000 on Windows (Argoyne)
 436101 make nzb suffix filter case-insensitive (Darren Albers)
 348445 tweak menu text to reflect multiple group selections (Darren ALbers)
 361388 add ability to queue nzb's when viewing them (Adrian Yee)

0.129 "Benson & Hedges Moscow Gold"
 436064 RFE: add 'copy url' to context menu
 436101 RFE: add nzb filter to 'import nzb' dialog (Frederic Crozat)
 428578 Crash when trying to post a supersede (Stephane Gregoire)
 434502 changing pane in tabbed mode (Lanif)
 432387 0.128 crash / memory corruption (Jeremy, Pav Lucistnik)
 432289 sometimes queued tasks never decode (Calin)
 419199 wrap should not be mandatory (Bill Baker)
 348445 can't select multiple groups (Artur Jachacy)
 090594 add option to always spawn editor when composign (Gauze)

0.128 "SR/CL: Leitmotiv: Toynbee Idea"
 431247 "Add a Scoring Rule" crashes if no article is selected (Christophe)
 432023 0.127 crashes when loading corrupted groups (Charles)
 432024 Speed improvements when saving and loading groups (Charles)
 431552 0.127 no longer stops downloading when disk is full (Alan Olsen)
 430958 Get N Headers fails if group has small # of headers (Anon)
 429449 Pan 0.126, 0.127 won't compile w/gtk 2.6.x (Jeff Berman)