@@ -5,8 +5,9 @@
  440470 fix 0.130 bug that made deleting articles very slow (Walt)
  440194 fix 0.127 memory leak (Valgrind)
  426377 workaround for GMime bug that won't show multipart images (Mike)
- 440545 saving a group's headers could be faster (Charles / sysprof)
- 441034 StringView::ltrim() speedups (Charles / sysprof)
+ 440545 saving a group's headers could be faster (Charles + sysprof)
+ 440990 more speedups in saving headers (Charles + sysprof)
+ 441034 StringView::ltrim() speedups (Charles + sysprof)
 
 0.130 "Hyperbolicsyllabicsesquedalymistic"
  417627 crash after throwing an instance of 'std::length_error' (Serge)
